--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ body {
 
 .header span {
   color: yellow;
+ font-size: 50px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;  
 }
 
 .about-me-content {
@@ -353,7 +357,7 @@ body {
   }
 
   .about-me img {
-    margin-top: 6.5rem;
+    margin-top: 2.5rem;
   }
 
   .skills-container {
@@ -390,8 +394,16 @@ body {
   }
 
   .about-me-content {
-    font-size: 16px;
+    font-size: 12px;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+   margin-top: 0px;
+   padding: 0px;
+   text-align: center;
   }
+ 
 
   .skills-item h6 {
     font-size: 16px;
