--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background-color: black;
   height: 100%;
+ 
+  
 }
 
 /* Navbar */
@@ -49,6 +54,7 @@ body {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   box-shadow: yellow 0px 0px 5px;
+  padding: 10px;
 }
 
 .navbar ul li p {
@@ -72,6 +78,8 @@ body {
   margin: 0 10px;
   display: flex;
   justify-content: space-around;
+
+  
 }
 
 /* Container */
@@ -233,7 +241,9 @@ body {
   width: 200px;
   height: 80px;
   border-radius: 10px;
+  
 }
+
 
 .skills-item h6 {
   color: white;
